<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <!-- autoLink	setAutoLinkMask(int)	是否将符合指定格式的文本转换为可单击的超链接形式 -->
        <!-- cursorVisible	setCursorVisible(boolean)	设置该文本框的光标是否可见 -->
        <!-- drwableBottom	setCompoundDrawablesWithIntrinsicBounds(Drawable,Drawable,Drawable,Drawable)	设置该文本框文本的底端绘制指定图像 -->
        <!-- drwableLift	setCompoundDrawablesWithIntrinsicBounds(Drawable,Drawable,Drawable,Drawable)	设置该文本框文本的左端绘制指定图像 -->
        <!-- drwablePadding	setCompoundDrawablesWithIntrinsicBounds(Drawable,Drawable,Drawable,Drawable)	设置该文本框文本与图形之间绘制指定图像 -->
        <!-- drwableRight	setCompoundDrawablesWithIntrinsicBounds(Drawable,Drawable,Drawable,Drawable) 设置该文本框文本的底端绘制指定图像 -->
        <!-- editable	设置该文本是否允许编辑 -->
        <!-- elipsize	设置当显示的文本超过了TextView的长度时如何处理文本内容 -->
        <!-- gravity	setGravity(int)	设置文本框内文本的对齐方式 -->
        <!-- height	setHeight(int)	设置该文本框的高度(以pixel为单位) -->
        <!-- hint	setHint(int)	设置当该文本框内容为空时,文本框内默认显示提示文本 -->
        <!-- minHeight	setMinHeight(int)	指定该文本框最小高度(以pixel为单位) -->
        <!-- maxHeight	setMaxHeight(int)	指定该文本框最大高度(以pixel为单位) -->
        <!-- minWidth	setMinWidth(int)	指定该文本框最小宽度(以pixel为单位) -->
        <!-- maxWidth	setMaxWidth(int)	指定该文本框最大宽度(以pixel为单位) -->
        <!-- lines	setLines(int)	设置该文本框默认占几行 -->
        <!-- MinLines	setMinLines(int)	设置该文本框最少占几行 -->
        <!-- MaxLines	setMaxLines(int)	设置爱文本框最多占几行 -->
        <!-- password	setTransformationMethod(TransformationMethod)	设置该文本框是一个密码框(以点代替字符) -->
        <!-- phoneNumber	setKeyListener(KeyListener)	设置该文本框只能接受电话号码 -->
        <!-- scrollHorizontally	setHorizontallScrolling(boolean)	设置当该文本框不够显示全部内容时是否允许水平滚动 -->
        <!-- SelectAllOnFocus	setSelectAllOnFocus(boolean)	如果文本框的内容可选择,设置当它获得焦点时是否允许自动选中所有文本 -->
        <!-- singleLine	setTransformationMethod	设置该文本框是否为单行模式.如果设为true,文本框不会换行 -->
        <!-- shadowColor	setShadowLayer(float,float,float,int)	设置文本框内文本的阴影的颜色 -->
        <!-- shadowDx	setShadowLayer(float,float,float,int)	设置文本框内文本的阴影在水平方向的偏移 -->
        <!-- shadowDy	setShadowLayer(float,float,float,int)	设置文本框内文本的阴影在垂直方向的偏移 -->
        <!-- shadowRadius	setShadowLayer(float,float,float,int)	设置文本框内文本的阴影的角度 -->
        <!-- text	setText(CharSequence)	设置文本框文本的内容 -->
        <!-- textColor	setTextColor(ColorStateList)	设置文本框内文本的颜色 -->
        <!-- textColorHighlight	setHighlightColor(int)	设置文本框内文本被选中时的颜色 -->
        <!-- textScaleX	setTextScaleX(float)	设置文本框内文本在水平方向上的缩放因子 -->
        <!-- textSize	setTextSize(float)	设置文本框内文本的字体大小 -->
        <!-- textStyle	setTypeface(Typeface)	设置文本框内文本的字体风格(粗体.斜体等) -->
        <!-- textface	setTypeface(Typeface)	设置文本框内文本的字体 -->
        <!-- width	setWidth(int)	设置该文本的宽度(以pixel为单位) -->

        <TextView
            android:id="@id/global_textview1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="3"
            android:scrollbars="vertical"
            android:text="line1\nline2\nline3\nline4\nline5\nline6\nline7" />

        <TextView
            style="@style/textView_showCode"
            android:text="@string/dev_textview_0" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:text="字符串超过最大显示长度才会进行跑马灯显示效果字符串超过最大显示长度才会进行跑马灯显示效果字符串超过最大显示长度才会进行跑马灯显示效果" />

        <TextView
            style="@style/textView_showCode"
            android:text="@string/dev_textview_1" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@android:drawable/ic_menu_add"
                android:text="@string/hello_world" />

            <TextView
                style="@style/textView_showCode"
                android:text="@string/dev_textview_2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:text="网址：www.baidu.com"
                android:textColorLink="@android:color/holo_green_light" />

            <TextView
                style="@style/textView_showCode"
                android:text="@string/dev_textview_3" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="粗体字"
                android:textStyle="bold" />

            <TextView
                style="@style/textView_showCode"
                android:text="@string/dev_textview_4" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="字符串操作最大长度，字符进行省略处理测试测试测试测试测试测试测试测试测试测试测试测试测试测试" />

            <TextView
                style="@style/textView_showCode"
                android:text="@string/dev_textview_5" />
            <!--
                 htmlStr 字符串  等同于java中 setText(Resource.getText()) 
				不需要格式时,就是Resource.getString();
            -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/html_str" />

            <TextView
                style="@style/textView_showCode"
                android:text="@string/dev_textview_6" />

            <TextView
                android:id="@id/global_textview2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/textView_showCode"
                android:text="@string/dev_textview_7" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="all"
                android:text="自动识别数字为电话号码 13996687614 自动识别邮箱 327270607@qq.com 自动识别网址 http://wap.baidu.com/" />

            <TextView
                style="@style/textView_showCode"
                android:text="android:autoLink=&apos;all&apos;" />

            <TextView
                android:id="@id/global_textview3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/link" />

            <TextView
                style="@style/textView_showCode"
                android:text="&lt;a href=&apos;tel:xxx&apos;>电话&lt;/a>\n&lt;a href=&apos;www.baidu.com&apos;>网址&lt;/a>\nTextView.setMovementMethod(LinkMovementMethod.getInstance())" />

            <TextView
                android:id="@id/global_textview4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/textView_showCode"
                android:text="@string/dev_textview_8" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>